	(twittering-make-connection-info): generate connection info
	according to an arugment `request'.
	(twittering-send-http-request): register the sentinel so that it
	will be invoked with three arguments, process, status-string and
	connection-info. The connection-info is automatically generated
	from the given HTTP request alist.
	(twittering-start-http-session): do not bind `connection-info'.

2010-09-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix `twittering-push-uri-onto-kill-ring'.
	(twittering-push-uri-onto-kill-ring): confirm that `kill-ring' is
	non-nil before calling `current-kill'.

	* twittering-mode.el: Copy tweets by "C-<mouse-3>".
	Thanks to Faried Nawaz.
	(twittering-mode-menu-on-uri-map): new keymap for menu on URI.
	(twittering-mode-on-uri-map): new keymap used on URI.
	(twittering-mode-map): bind "C-<down-mouse-3>" to
	`mouse-set-point' to move the point and bind "C-<mouse-3>" to
	`twittering-push-tweet-onto-kill-ring'.
	(twittering-make-clickable-status-datum): embed new keymap
	`twittering-mode-on-uri-map' in texts that have `uri' property.
	(twittering-generate-format-table): likewise.
	(twittering-generate-formater-for-first-spec): likewise.
	(twittering-push-tweet-onto-kill-ring): new function.

	* twittering-mode.el: Introduce a function sending a HTTP requests
	with `curl'.
	(twittering-connection-type-table): use new functions
	`twittering-start-http-session-generic' and
	`twittering-send-http-request-curl' for connection-type `curl'.
	(twittering-oauth-get-token-function-table): register the
	pre-processing function for `curl'.
	(twittering-oauth-get-token-alist-generic): new function. This
	works with a function sending HTTP request.
	(twittering-oauth-get-token-alist-curl): removed. The function is
	replaced with the combination of
	`twittering-oauth-get-token-alist-generic' and
	`twittering-send-http-request-curl'.
	(twittering-oauth-get-token-alist): use