@@ -4292,16 +4292,26 @@ The parameter symbols are following:
       ,@additional
       ,@entry)))
 
-(defun twittering-send-http-request (request additional-info sentinel)
+(defun twittering-send-http-request (request additional-info sentinel &optional order table)
   "Open a connection and return a subprocess object for the connection.
 REQUEST must be an alist that has the same keys as that generated by
 `twittering-make-http-request'.
 SENTINEL is called as a function when the process changes state.
 It gets three arguments: the process, a string describing the change, and
 the connection-info, which is generated by `twittering-make-connection-info'
-and also includes an alist ADDITIONAL-INFO."
-  (let* ((connection-info
-	  (twittering-make-connection-info request additional-info))
+and also includes an alist ADDITIONAL-INFO.
+
+How to perform the request is selected from TABLE according to the priority
+order ORDER. ORDER and TABLE are directly sent to
+`twittering-make-connection-info'.
+If ORDER is nil, `twittering-connection-type-order' is used in place of ORDER.
+If TABLE is nil, `twittering-connection-type-table' is used in place of TABLE.
+"
+  (let* ((order (or order twittering-connection-type-order))
+	 (table (or table twittering-connection-type-table))
+	 (connection-info
+	  (twittering-make-connection-info request additional-info
+					   order table))
 	 (func (cdr (assq 'send-http-request connection-info)))
 	 (temp-buffer (generate-new-buffer "*twmode-http-buffer*")))
     (when (and func (functionp func))
